--- a/index.html
+++ b/index.html
@@ -21,49 +21,34 @@
 
 <style>
     /* 1. FIX THE OVERLAP WITH THE CLOCK */
-    /* This ensures headers never touch the iPhone status bar icons.
-       It uses the original, broadest selectors for safety, focusing only on padding-top. */
-    header, 
-    .header-container, 
-    #root > div > div:first-child, /* This targets the top-level container of your app */
-    #root > div:first-child /* Also targeting the immediate child of #root for top-level padding */
-    {
+    /* This ensures headers never touch the iPhone status bar icons */
+    header, .header-container, #root > div > div:first-child {
         padding-top: env(safe-area-inset-top) !important;
-        /* Removed min-height, flex properties, and box-sizing from here to prevent layout disruption */
+        min-height: calc(60px + env(safe-area-inset-top)) !important;
+        display: flex !important;
+        flex-direction: column !important;
+        justify-content: center !important;
     }
 
     /* 2. FIX THE TITLES (LOGO VS INTERNAL PAGES) */
     .font-heading { 
         font-family: 'Cinzel', serif; 
         line-height: 1.2 !important;
-        text-align: center !important; /* Ensure titles are generally centered */
     }
 
-    /* Target ONLY the main "QALB-E-DUA" logo to stay on one line.
-       This is a very specific selector for the main logo on the home page. */
-    #root > div:first-child > div:first-child .font-heading { /* Assuming the main logo is in the first div inside the first div of #root */
+    /* Target ONLY the main "QALB-E-DUA" logo to stay on one line */
+    #root > div > div:first-child .font-heading {
         white-space: nowrap !important;
         font-size: 22px !important;
-        max-width: 90% !important; /* Limit width to prevent pushing out icons */
-        overflow: hidden !important; /* Hide overflow */
-        text-overflow: ellipsis !important; /* Show ellipsis if content is truncated */
-        margin-left: auto !important; /* Center it */
-        margin-right: auto !important; /* Center it */
     }
-    
-    /* ALLOW other page titles (like "PRAYERS OF THE PROPHET") to wrap naturally.
-       This rule has less specificity than the main logo rule, so it applies to other headers. */
-    header .font-heading, 
-    .header-container .font-heading, 
-    .title-container .font-heading {
-        white-space: normal !important; /* Allow text to wrap */
-        font-size: 1.2rem !important; /* Consistent font size */
-        width: 100% !important; /* Take available width */
-        max-width: calc(100% - 100px) !important; /* Leave space for back/settings icons */
-        margin: 0 auto !important; /* Center it */
-        padding: 0 !important; /* Reset padding to be controlled by its parent */
-        box-sizing: border-box !important; /* Ensure width calculation is correct */
-        line-height: 1.4 !important; /* Better line height for wrapped text */
+
+    /* ALLOW other page titles like "PRAYERS OF THE PROPHET" to wrap naturally */
+    /* This stops the "..." cut off problem in your picture */
+    header .font-heading, .title-container .font-heading {
+        white-space: normal !important;
+        font-size: 1.2rem !important;
+        width: 90% !important;
+        margin: 0 auto !important;
     }
    
     /* 3. STOP THE BLUE FLASHING WHEN PRESSING BUTTONS */
@@ -80,20 +65,9 @@
         scrollbar-width: none !important;
         margin: 0;
         padding: 0;
-        height: 100%; /* Ensure full height */
-        width: 100%; /* Ensure full width */
-        /* IMPORTANT: No 'overflow: hidden' on html/body to prevent content disappearance */
     }
 
-    /* Keep #root scrollable if its content exceeds viewport, but don't force it */
-    #root {
-        height: 100%; /* Ensure #root takes full height of viewport */
-        width: 100%; /* Ensure #root takes full width of viewport */
-        overflow-y: auto; /* Allow scrolling *within* the root if content overflows */
-        -webkit-overflow-scrolling: touch; /* For smooth scrolling on iOS */
-    }
-
-    /* 5. YOUR ORIGINAL STYLES (preserved as is) */
+    /* 5. YOUR ORIGINAL STYLES */
     .font-arabic { font-family: 'Scheherazade New', serif; line-height: 2.3; }
     .no-scrollbar::-webkit-scrollbar { display: none; }
     .animate-in { animation: fadeIn 0.4s ease-out; }
